# jackdaw

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: README.md  access_interface.md  detection.md  discover.md  save.md  serializers.md
examples/: conftest.py  test_artefact_remote.py  test_nested_models.py
examples/architectures/: test_list_models.py
examples/frameworks/: test_darts.py  test_lightgbm.py  test_mixed_frameworks.py  test_pytorch.py  test_sklearn.py  test_tensorflow.py  test_using_preprocessors.py  test_xgboost.py
itests/: test_artefact_remote.py  test_e2e.py
itests/frameworks/: lightgbm.py  sklearn.py  test_pytorch.py  test_tensorflow.py  test_xgboost.py
jackdaw/: __init__.py  artefact_decorator.py  artefact_dict.py  artefact_endpoint.py  base_architecture.py  child_architecture.py  config_loader.py  debugging.py  entrypoint_architecture.py  resource.py  vcs.py
jackdaw/detectors/: __init__.py  child_architecture_detector.py  class_detector.py  torch.py  torch_geo.py
jackdaw/serializers/: __init__.py  pickle.py  tensor.py
jackdaw_ml/: __init__.py  artefact_container.py  artefact_decorator.py  artefact_dict.py  artefact_endpoint.py  base_architecture.py  child_architecture.py  config_loader.py  debugging.py  entrypoint_architecture.py  loads.py  metric_logging.py  resource.py  run_id.py  saves.py  trace.py  vcs.py
jackdaw_ml/access_interface/: __init__.py  dict_interface.py  list_interface.py  sklearn_interface.py
tests/: conftest.py  test_artefact.py
(+26 files in other folders)
